--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.1",
         "phpunit/phpunit": "^9.5.10",
         "rakutentech/laravel-request-docs": "^1.17",
         "spatie/laravel-ignition": "^1.0",
